# excel-autoprice

./: .gitignore  AGENTS.md  README.md  pyproject.toml
generated_orders/random_orders_2026-03-31/: manifest.txt  order_01.xlsx  order_02.xlsx  order_03.xlsx  order_04.xlsx  order_05.xlsx  order_06.xlsx  order_07.xlsx  order_08.xlsx  order_09.xlsx  order_10.xlsx  order_11.xlsx  order_12.xlsx  order_13.xlsx  order_14.xlsx  order_15.xlsx
scripts/: build_exe.ps1  build_installer.ps1  build_pyinstaller.ps1  cleanup_workspace.ps1  cx_setup.py  perf_benchmark.py  run_tests.ps1
src/seasonal_price/: __init__.py  config.py  exceptions.py  logging_config.py
src/seasonal_price.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/seasonal_price/application/: api.py  bootstrap.py  engine.py
src/seasonal_price/domain/: models.py
src/seasonal_price/domain/services/: allocation.py  rounding.py  sku_registry.py
src/seasonal_price/infrastructure/: price_layout.py
src/seasonal_price/infrastructure/db/: __init__.py  migrations.py  sqlite_store.py
src/seasonal_price/infrastructure/excel/: __init__.py  excel_processor.py
src/seasonal_price/infrastructure/pdf/: __init__.py  reportlab_renderer.py
src/seasonal_price/presentation/: gui.py  gui_compact.py
tests/: test_allocation.py  test_engine_integration.py  test_rounding.py  test_sku_registry.py
