[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seasonal-price"
version = "0.1.0"
description = "Сезонный Прайс: GUI для пакетной обработки прайсов и заказов."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "reportlab>=4.4.0",
  "tqdm>=4.67.1",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
gui = [
  "PySide6>=6.11.0",
]

[project.scripts]
seasonal-price = "seasonal_price.presentation.gui:run_gui"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["N818"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
packages = ["seasonal_price"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
